# toolconv

./: .env.example  .eslintrc.cjs  .gitignore  DESIGN.md  README.md  index.html  package-lock.json  package.json  prettier.config.cjs  pyproject.toml  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/scripts/: wake-apps.js
.github/workflows/: deploy.yml  keep-alive.yml
Documents/3D-posture&motion-analytics-dashboard/: .gitignore  README.md
Documents/f1-project/: KEEP_ALIVE_SETUP.md
data/processed/: graph.pkl  registry.json
data/raw/: sample_tools.json  toolbench_sample.json
outputs/: run_a.jsonl  run_b.jsonl
public/: 404.html  robots.txt  sitemap.xml
scripts/: wake_up.js
src/: App.tsx  main.tsx
src/components/: AnimatedBackground.tsx  CaseModal.tsx  CommandPalette.tsx  CustomCursor.tsx  ExperienceItem.tsx  Hero.tsx  ImpactHighlights.tsx  MagneticButton.tsx  Navbar.tsx  ParallaxSection.tsx  ProjectCard.tsx  ScrollProgress.tsx  ScrollReveal.tsx  StickyCTA.tsx  TrustedBy.tsx
src/data/: experience.ts  projects.ts
src/lib/: design-tokens.ts
src/pages/: ProjectAutoKPI.tsx  ProjectF1Prediction.tsx  ProjectLexGuard.tsx  ProjectOncoVision.tsx  ProjectPostureAnalytics.tsx  ProjectViGraphRag.tsx
src/sections/: About.tsx  Contact.tsx  Experience.tsx  Projects.tsx  Skills.tsx
src/styles/: globals.css
tests/e2e/: test_generate_50.py
tests/unit/: test_memory_store.py  test_registry.py  test_validation.py
toolconv/: cli.py
toolconv/agents/: assistant_agent.py  planner_agent.py  sampler_agent.py  user_proxy_agent.py  validator_agent.py
(+57 files in other folders)
