[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toolconv"
version = "0.1.0"
description = "Synthetic tool-call conversation generator for AI engineering assessment"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "networkx",
    "mem0ai",
    "click",
    "faker",
    "openai",
    "anthropic",
    "python-dotenv",
]

[project.scripts]
toolconv = "toolconv.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
